# YCCL-LLM

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake
BIO_Bcast/: BIO.cc  BIO.h
PJT_allreduce_algorithms/: PJT_X86_AVX_operations.c  allreduce_module.h  inter_node_coroutine.h  pjt_hierarchy_reduce_scatter.cc  pjt_memory_bandidth_efficient.cc
include/: pjt_include.h  yhccl_allreduce.h  yhccl_contexts.h  yhccl_options.h
src/: Rdma_contexts.cc  mpi_allreduce.cc  yhccl_allgather.cc  yhccl_allreduce.cc  yhccl_barrier.cc  yhccl_bcast.cc  yhccl_communicator.cc  yhccl_contexts.cc  yhccl_reduce.cc
test/: openmpitest.yizimi  slurm-3564026.out  test_YCCL-LLM.cc  test_YCCL_LLM.sh  test_osu_inter_YCCL_LLM.sh  test_osu_intra_YCCL_LLM.sh  yccl_llmtest.yizimi
